# jarvis-cli

./: .gitignore  LICENSE  README.md  SECURITY.md  install.bat  pyproject.toml  run.bat
src/jarvis/: __init__.py  __main__.py  audio_feedback.py  cli.py  config.py  daemon.py  download_model.py  hook.py  hotkey_dialog.py  icon.py  info_dialog.py  recorder.py  settings.py  storage.py  transcriber.py  tray.py  vad.py
tests/: test_hook.py  test_storage.py  test_transcriber.py
