[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-cli"
version = "0.1.0"
description = "Voice middleware for Claude Code — speech-to-text in PT-BR and EN"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "keyboard>=0.13.5",
    "mouse>=0.7.1",
    "click>=8.1",
    "pystray>=0.19",
    "Pillow>=10.0",
    "nvidia-cublas-cu12>=12.4; sys_platform == 'win32'",
    "nvidia-cudnn-cu12>=9.0; sys_platform == 'win32'",
]

[project.scripts]
jarvis = "jarvis.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
